--- a/infrastructure/Vagrantfile
+++ b/infrastructure/Vagrantfile
@@ -1,6 +1,7 @@
 BOX_IMAGE = "ubuntu/focal64"
-DC1_NODE_COUNT = 2
-DC2_NODE_COUNT = 2
+SERVER_NODES = 2
+CLIENT_DC1_NODES = 2
+CLIENT_DC2_NODES = 2
 
 Vagrant.configure("2") do |config|
   config.vm.define "jumpserver" do |subconfig|
@@ -8,20 +9,24 @@ Vagrant.configure("2") do |config|
     subconfig.vm.hostname = "nomad.local.nj1.jumpserver"
     subconfig.vm.network :private_network, ip: "10.0.1.1"
   end
-  
-  (1..DC1_NODE_COUNT).each do |i|
+
+  IP_OFFSET = 1
+
+  (1..CLIENT_DC1_NODES).each do |i|
     config.vm.define "dc1.worker#{i}" do |subconfig|
       subconfig.vm.box = BOX_IMAGE
       subconfig.vm.hostname = "nomad.dc1.vm#{i}.worker"
-      subconfig.vm.network :private_network, ip: "10.0.1.#{1+i}"
+      subconfig.vm.network :private_network, ip: "10.0.1.#{1+IP_OFFSET}"
     end
   end
 
-  (1..DC2_NODE_COUNT).each do |i|
+  IP_OFFSET = 1 + CLIENT_DC1_NODES
+
+  (1..CLIENT_DC2_NODES).each do |i|
     config.vm.define "dc2.worker#{i}" do |subconfig|
       subconfig.vm.box = BOX_IMAGE
       subconfig.vm.hostname = "nomad.dc2.vm#{i}.worker"
-      subconfig.vm.network :private_network, ip: "10.0.1.#{1+DC1_NODE_COUNT+i}"
+      subconfig.vm.network :private_network, ip: "10.0.1.#{IP_OFFSET+i}"
     end
   end
 end
