--- a/infrastructure/Vagrantfile
+++ b/infrastructure/Vagrantfile
@@ -1,17 +1,20 @@
 BOX_IMAGE = "ubuntu/focal64"
 
 SERVER_DC1_NODES = 1
-SERVER_DC2_NODES = 2
+SERVER_DC2_NODES = 0
 
-CLIENT_DC1_NODES = 2
-CLIENT_DC2_NODES = 2
+CLIENT_DC1_NODES = 1
+CLIENT_DC2_NODES = 1
+
+BRIDGE_NETWORK_INTERFACE_NAME = "Realtek 8821CE Wireless LAN 802.11ac PCI-E NIC"
 
 Vagrant.configure("2") do |config|
+
   config.vm.define "nj1.local.jumper.nomad" do |subconfig|
     subconfig.vm.box = BOX_IMAGE
     subconfig.vm.hostname = "nj1-local-jumper-nomad"
-    subconfig.vm.network :hostonly, ip: "10.0.1.1"
-    subconfig.vm.network :bridged
+    subconfig.vm.network "private_network", ip: "10.0.1.2"
+    subconfig.vm.network "public_network", bridge: BRIDGE_NETWORK_INTERFACE_NAME
     subconfig.vm.provider :virtualbox do |vb|
       vb.customize ["modifyvm", :id, "--memory", "1024"]
       vb.customize ["modifyvm", :id, "--cpus", "2"]
@@ -25,8 +28,8 @@ Vagrant.configure("2") do |config|
     config.vm.define "ns#{i}.dc1.server.nomad" do |subconfig|
       subconfig.vm.box = BOX_IMAGE
       subconfig.vm.hostname = "ns#{i}-dc1-server-nomad"
-      subconfig.vm.network :hostonly, ip: "10.0.1.#{i+IP_OFFSET}"
-      subconfig.vm.network :bridged
+      subconfig.vm.network "private_network", ip: "10.0.1.#{i+IP_OFFSET}"
+      subconfig.vm.network "public_network", bridge: BRIDGE_NETWORK_INTERFACE_NAME
       subconfig.vm.provider :virtualbox do |vb|
         vb.customize ["modifyvm", :id, "--memory", "512"]
         vb.customize ["modifyvm", :id, "--cpus", "1"]
@@ -40,8 +43,8 @@ Vagrant.configure("2") do |config|
     config.vm.define "ns#{i}.dc2.server.nomad" do |subconfig|
       subconfig.vm.box = BOX_IMAGE
       subconfig.vm.hostname = "ns#{i}-dc2-server-nomad"
-      subconfig.vm.network :hostonly, ip: "10.0.1.#{i+IP_OFFSET}"
-      subconfig.vm.network :bridged
+      subconfig.vm.network "private_network", ip: "10.0.1.#{i+IP_OFFSET}"
+      subconfig.vm.network "public_network", bridge: BRIDGE_NETWORK_INTERFACE_NAME
       subconfig.vm.provider :virtualbox do |vb|
         vb.customize ["modifyvm", :id, "--memory", "512"]
         vb.customize ["modifyvm", :id, "--cpus", "1"]
@@ -56,8 +59,9 @@ Vagrant.configure("2") do |config|
     config.vm.define "nc#{i}.dc1.client.nomad" do |subconfig|
       subconfig.vm.box = BOX_IMAGE
       subconfig.vm.hostname = "nc#{i}-dc1-client-nomad"
-      subconfig.vm.network :hostonly, ip: "10.0.1.#{i+IP_OFFSET}"
-      subconfig.vm.network :bridged
+      subconfig.vm.network "private_network", ip: "10.0.1.#{i+IP_OFFSET}"
+      subconfig.vm.network "public_network", bridge: BRIDGE_NETWORK_INTERFACE_NAME
+      subconfig.vm.provider :virtualbox do |vb|
         vb.customize ["modifyvm", :id, "--memory", "512"]
         vb.customize ["modifyvm", :id, "--cpus", "1"]
       end
@@ -70,8 +74,8 @@ Vagrant.configure("2") do |config|
     config.vm.define "nc#{i}.dc2.client.nomad" do |subconfig|
       subconfig.vm.box = BOX_IMAGE
       subconfig.vm.hostname = "nc#{i}-dc2-client-nomad"
-      subconfig.vm.network :hostonly, ip: "10.0.1.#{i+IP_OFFSET}"
-      subconfig.vm.network :bridged
+      subconfig.vm.network "private_network", ip: "10.0.1.#{i+IP_OFFSET}"
+      subconfig.vm.network "public_network", bridge: BRIDGE_NETWORK_INTERFACE_NAME
       subconfig.vm.provider :virtualbox do |vb|
         vb.customize ["modifyvm", :id, "--memory", "512"]
         vb.customize ["modifyvm", :id, "--cpus", "1"]
