--- a/provisioning/inventory/inventory.yaml
+++ b/provisioning/inventory/inventory.yaml
@@ -14,29 +14,36 @@ all: # keys must be unique, i.e. only one 'hosts' per group
           ansible_ssh_private_key_file: '{{inventory_dir}}/../../infrastructure/.vagrant/machines/ns1.dc1.server.nomad/virtualbox/private_key'
           ansible_user: vagrant
           ansible_host: 10.0.1.3
+          datacenterid: dc1
         ns1dc2:
           ansible_ssh_private_key_file: '{{inventory_dir}}/../../infrastructure/.vagrant/machines/ns1.dc2.server.nomad/virtualbox/private_key'
           ansible_user: vagrant
           ansible_host: 10.0.1.4
+          datacenterid: dc2
         ns2dc2:
           ansible_ssh_private_key_file: '{{inventory_dir}}/../../infrastructure/.vagrant/machines/ns2.dc2.server.nomad/virtualbox/private_key'
           ansible_user: vagrant
           ansible_host: 10.0.1.5
+          datacenterid: dc2
     nomadclients:
       hosts:
         nc1dc1:
           ansible_ssh_private_key_file: '{{inventory_dir}}/../../infrastructure/.vagrant/machines/nc1.dc1.client.nomad/virtualbox/private_key'
           ansible_user: vagrant
           ansible_host: 10.0.1.6
+          datacenterid: dc1
         # nc2dc1:
         #   ansible_ssh_private_key_file: "{{inventory_dir}}/../../infrastructure/.vagrant/machines/nc2.dc1.client.nomad/virtualbox/private_key"
         #   ansible_user: vagrant
         #   ansible_host: 10.0.1.7
-        ns1dc2:
+        #   datacenterid: dc1
+        nc1dc2:
           ansible_ssh_private_key_file: '{{inventory_dir}}/../../infrastructure/.vagrant/machines/nc1.dc2.client.nomad/virtualbox/private_key'
           ansible_user: vagrant
-          ansible_host: 10.0.1.8
-        # ns2dc2:
+          ansible_host: 10.0.1.7
+          datacenterid: dc2
+        # nc2dc2:
         #   ansible_ssh_private_key_file: "{{inventory_dir}}/../../infrastructure/.vagrant/machines/nc2.dc2.client.nomad/virtualbox/private_key"
         #   ansible_user: vagrant
         #   ansible_host: 10.0.1.9
+        #   datacenterid: dc2
