--- a/ansible/roles/configure_nomad_server/tasks/main.yaml
+++ b/ansible/roles/configure_nomad_server/tasks/main.yaml
@@ -42,7 +42,7 @@
 
 - name: 'Create systemd service'
   ansible.builtin.template:
-    src: 'files/nomad_server_service.j2'
+    src: 'files/nomad_service.j2'
     dest: '/etc/systemd/system/nomad.service'
   become: true
   register: nomad_system_config
